WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -52,19 +52,19 @@
   "identities.messages.1050016": "この方法を無効にする",
   "identities.messages.1050017": "これはあなたの認証アプリの秘密です。QRコードをスキャンできない場合に使用してください。",
   "identities.messages.1050018": "セキュリティキー「{display_name}」を削除",
-  "identities.messages.1060001": "アカウントの回復に成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルサインイン）を設定してください。",
-  "identities.messages.1060002": "回復リンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
-  "identities.messages.1060003": "回復コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060001": "アカウントのログインに成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルサインイン）を設定してください。",
+  "identities.messages.1060002": "パスワード再発行リンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060003": "パスワード再発行コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1070001": "パスワード",
   "identities.messages.1070002": "{title}",
   "identities.messages.1070003": "保存",
   "identities.messages.1070004": "ID",
-  "identities.messages.1070005": "提出",
+  "identities.messages.1070005": "送信",
   "identities.messages.1070006": "コードを確認",
   "identities.messages.1070007": "メール",
   "identities.messages.1070008": "コードを再送",
   "identities.messages.1070009": "続行",
-  "identities.messages.1070010": "回復コード",
+  "identities.messages.1070010": "パスワード再発行コード",
   "identities.messages.1070011": "確認コード",
   "identities.messages.1070012": "登録コード",
   "identities.messages.1070013": "ログインコード",
@@ -120,10 +120,10 @@
   "identities.messages.4040003": "登録コードが無効、または既に使用されています。もう一度お試しください。",
   "identities.messages.4050001": "設定フローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
   "identities.messages.4060001": "要求はすでに成功して完了しており、再試行はできません。",
-  "identities.messages.4060002": "回復フローが失敗状態に達しました。再試行が必要です。",
-  "identities.messages.4060004": "回復トークンが無効、または既に使用されています。フローを再試行してください。",
-  "identities.messages.4060005": "回復フローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
-  "identities.messages.4060006": "回復コードが無効、または既に使用されています。もう一度お試しください。",
+  "identities.messages.4060002": "パスワード再発行フローが失敗状態に達しました。再試行が必要です。",
+  "identities.messages.4060004": "パスワード再発行トークンが無効、または既に使用されています。フローを再試行してください。",
+  "identities.messages.4060005": "パスワード再発行フローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
+  "identities.messages.4060006": "パスワード再発行コードが無効、または既に使用されています。もう一度お試しください。",
   "identities.messages.4070001": "確認トークンが無効、または既に使用されています。フローを再試行してください。",
   "identities.messages.4070002": "要求はすでに成功して完了しており、再試行はできません。",
   "identities.messages.4070003": "確認フローが失敗状態に達しました。再試行が必要です。",
@@ -145,7 +145,7 @@
   "logout.title": "ログアウトしますか？",
   "recovery.login-button": "サインイン",
   "recovery.login-label": "資格情報を覚えていますか？",
-  "recovery.title": "アカウントを回復",
+  "recovery.title": "パスワードを再発行",
   "registration.login-button": "サインイン",
   "registration.login-label": "すでにアカウントをお持ちですか？",
   "registration.subtitle-oauth2": "{clientName}の認証用",
