WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -13,8 +13,8 @@
   "error.title": "エラーが発生しました",
   "error.title-internal-server-error": "内部サーバーエラー",
   "error.title-not-found": "404 - ページが見つかりません",
-  "identities.messages.1010001": "サインイン",
-  "identities.messages.1010002": "{provider}でサインイン",
+  "identities.messages.1010001": "ログイン",
+  "identities.messages.1010002": "{provider}でログイン",
   "identities.messages.1010003": "あなたであることを確認するために、このアクションを確認してください。",
   "identities.messages.1010004": "第二の認証チャレンジを完了してください。",
   "identities.messages.1010005": "確認",
@@ -27,13 +27,13 @@
   "identities.messages.1010012": "WebAuthnデバイス（例：セキュリティキー、生体認証スキャナーなど）を準備し、「続行」を押してください。",
   "identities.messages.1010013": "続行",
   "identities.messages.1010014": "コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、ログインを再試行してください。",
-  "identities.messages.1010015": "コードでサインイン",
-  "identities.messages.1040001": "サインアップ",
-  "identities.messages.1040002": "{provider}でサインアップ",
+  "identities.messages.1010015": "コードでログイン",
+  "identities.messages.1040001": "新規登録",
+  "identities.messages.1040002": "{provider}で新規登録",
   "identities.messages.1040003": "続行",
-  "identities.messages.1040004": "セキュリティキーでサインアップ",
+  "identities.messages.1040004": "セキュリティキーで新規登録",
   "identities.messages.1040005": "コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録を再試行してください。",
-  "identities.messages.1040006": "コードでサインアップ",
+  "identities.messages.1040006": "コードで新規登録",
   "identities.messages.1050001": "変更が保存されました！",
   "identities.messages.1050002": "{provider}をリンク",
   "identities.messages.1050003": "{provider}のリンクを解除",
@@ -52,7 +52,7 @@
   "identities.messages.1050016": "この方法を無効にする",
   "identities.messages.1050017": "これはあなたの認証アプリの秘密です。QRコードをスキャンできない場合に使用してください。",
   "identities.messages.1050018": "セキュリティキー「{display_name}」を削除",
-  "identities.messages.1060001": "アカウントのログインに成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルサインイン）を設定してください。",
+  "identities.messages.1060001": "アカウントのログインに成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルログイン）を設定してください。",
   "identities.messages.1060002": "パスワード再発行リンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1060003": "パスワード再発行コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1070001": "パスワード",
@@ -97,15 +97,15 @@
   "identities.messages.4000024": "最小 {min_items} 項目が許可されていますが、実際には {actual_items} 項目が見つかりました。",
   "identities.messages.4000025": "インデックス {index_a} と {index_b} のアイテムが同じです。",
   "identities.messages.4000026": "{allowed_types_list} が期待されますが、実際は {actual_type} です。",
-  "identities.messages.4000027": "同じ識別子（メール、電話、ユーザー名...）を持つアカウントが既に存在します。既存のアカウントにサインインして、設定ページでソーシャルプロファイルをリンクしてください。",
-  "identities.messages.4000028": "{credential_identifier_hint} でサインインしようとしましたが、それは別のアカウントですでに使用されています。{available_credential_types_list} を使用してサインインできます。以下のソーシャルサインインプロバイダのいずれかを使用してサインインできます: {Available_oidc_providers_list}。",
+  "identities.messages.4000027": "同じ識別子（メール、電話、ユーザー名...）を持つアカウントが既に存在します。既存のアカウントにログインして、設定ページでソーシャルプロファイルをリンクしてください。",
+  "identities.messages.4000028": "{credential_identifier_hint} でログインしようとしましたが、それは別のアカウントですでに使用されています。{available_credential_types_list} を使用してログインできます。以下のソーシャルログインプロバイダのいずれかを使用してログインできます: {Available_oidc_providers_list}。",
   "identities.messages.4000029": "定数 {expected} と等しくなければなりません。",
   "identities.messages.4000030": "定数の一致に失敗しました。",
   "identities.messages.4000031": "識別子に似すぎているため、パスワードは使用できません。",
   "identities.messages.4000032": "パスワードは少なくとも {min_length} 文字である必要がありますが、実際は {actual_length} 文字です。",
   "identities.messages.4000033": "パスワードは最大 {max_length} 文字である必要がありますが、実際は {actual_length} 文字です。",
   "identities.messages.4000034": "パスワードはデータ侵害で発見されたため、これ以上使用することはできません。",
-  "identities.messages.4000035": "このアカウントは存在しないか、コードによるサインインが設定されていません。",
+  "identities.messages.4000035": "このアカウントは存在しないか、コードによるログインが設定されていません。",
   "identities.messages.4000036": "提供された特性は、このフローに以前関連付けられた特性と一致しません。",
   "identities.messages.4010001": "ログインフローは {expired_at_unix_since_minutes} 分前に期限切れになりました。もう一度お試しください。",
   "identities.messages.4010002": "あなたをログインさせる戦略が見つかりませんでした。フォームを正しく記入しましたか？",
@@ -134,25 +134,25 @@
   "login.logged-in-as-label": "ログイン中のユーザー:",
   "login.logout-button": "ログアウト",
   "login.logout-label": "何か問題がありますか？",
-  "login.registration-button": "サインアップ",
+  "login.registration-button": "新規登録",
   "login.registration-label": "アカウントをお持ちでないですか？",
   "login.subtitle-oauth2": "{clientName}の認証用",
-  "login.title": "サインイン",
+  "login.title": "ログイン",
   "login.title-aal2": "二要素認証",
   "login.title-refresh": "本人確認を行ってください",
   "logout.accept-button": "はい",
   "logout.reject-button": "いいえ",
   "logout.title": "ログアウトしますか？",
-  "recovery.login-button": "サインイン",
+  "recovery.login-button": "ログイン",
   "recovery.login-label": "資格情報を覚えていますか？",
   "recovery.title": "パスワードを再発行",
-  "registration.login-button": "サインイン",
+  "registration.login-button": "ログイン",
   "registration.login-label": "すでにアカウントをお持ちですか？",
   "registration.subtitle-oauth2": "{clientName}の認証用",
-  "registration.title": "アカウントを登録",
+  "registration.title": "アカウントを新規登録",
   "settings.navigation-backup-codes": "2FAバックアップコード",
   "settings.navigation-logout": "ログアウト",
-  "settings.navigation-oidc": "ソーシャルサインイン",
+  "settings.navigation-oidc": "ソーシャルログイン",
   "settings.navigation-password": "パスワード",
   "settings.navigation-profile": "プロファイル",
   "settings.navigation-totp": "認証アプリ",
@@ -161,12 +161,12 @@
   "settings.title": "アカウント設定",
   "settings.title-lookup-secret": "2FAバックアップ復旧コードを管理",
   "settings.title-navigation": "アカウント設定",
-  "settings.title-oidc": "ソーシャルサインイン",
+  "settings.title-oidc": "ソーシャルログイン",
   "settings.title-password": "パスワードを変更",
   "settings.title-profile": "プロファイル設定",
   "settings.title-totp": "2FA TOTP認証アプリを管理",
   "settings.title-webauthn": "ハードウェアトークンを管理",
-  "verification.registration-button": "サインアップ",
+  "verification.registration-button": "新規登録",
   "verification.registration-label": "アカウントをお持ちでないですか？",
   "verification.title": "アカウントを確認"
 }
