WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -53,8 +53,8 @@
   "identities.messages.1050017": "これはあなたの認証アプリの秘密です。QRコードをスキャンできない場合に使用してください。",
   "identities.messages.1050018": "セキュリティキー「{display_name}」を削除",
   "identities.messages.1060001": "アカウントのログインに成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルログイン）を設定してください。",
-  "identities.messages.1060002": "パスワード再発行リンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
-  "identities.messages.1060003": "パスワード再発行コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060002": "パスワードリセットリンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060003": "パスワードリセットコードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1070001": "パスワード",
   "identities.messages.1070002": "{title}",
   "identities.messages.1070003": "保存",
@@ -64,7 +64,7 @@
   "identities.messages.1070007": "メール",
   "identities.messages.1070008": "コードを再送",
   "identities.messages.1070009": "続行",
-  "identities.messages.1070010": "パスワード再発行コード",
+  "identities.messages.1070010": "パスワードリセットコード",
   "identities.messages.1070011": "確認コード",
   "identities.messages.1070012": "登録コード",
   "identities.messages.1070013": "ログインコード",
@@ -76,7 +76,7 @@
   "identities.messages.4000003": "長さは {min_length} 以上である必要がありますが、実際の長さは {actual_length} です。",
   "identities.messages.4000004": "パターン \"{pattern}\" と一致しません",
   "identities.messages.4000005": "パスワードは {reason} のため使用できません。",
-  "identities.messages.4000006": "提供された資格情報は無効です。パスワードやユーザー名、メールアドレス、電話番号のスペルミスを確認してください。",
+  "identities.messages.4000006": "提供されたログイン情報は無効です。パスワードやユーザー名、メールアドレス、電話番号のスペルミスを確認してください。",
   "identities.messages.4000007": "同じ識別子（メール、電話、ユーザー名...）を持つアカウントが既に存在します。",
   "identities.messages.4000008": "提供された認証コードは無効です。もう一度お試しください。",
   "identities.messages.4000009": "ログイン識別子を見つけることができませんでした。設定を忘れたのでしょうか？これはサーバーの設定ミスによるものかもしれません。",
@@ -120,10 +120,10 @@
   "identities.messages.4040003": "登録コードが無効、または既に使用されています。もう一度お試しください。",
   "identities.messages.4050001": "設定フローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
   "identities.messages.4060001": "要求はすでに成功して完了しており、再試行はできません。",
-  "identities.messages.4060002": "パスワード再発行フローが失敗状態に達しました。再試行が必要です。",
-  "identities.messages.4060004": "パスワード再発行トークンが無効、または既に使用されています。フローを再試行してください。",
-  "identities.messages.4060005": "パスワード再発行フローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
-  "identities.messages.4060006": "パスワード再発行コードが無効、または既に使用されています。もう一度お試しください。",
+  "identities.messages.4060002": "パスワードリセットフローが失敗状態に達しました。再試行が必要です。",
+  "identities.messages.4060004": "パスワードリセットトークンが無効、または既に使用されています。フローを再試行してください。",
+  "identities.messages.4060005": "パスワードリセットフローの有効期限が {expired_at_unix_since_minutes} 分前に切れています。もう一度お試しください。",
+  "identities.messages.4060006": "パスワードリセットコードが無効、または既に使用されています。もう一度お試しください。",
   "identities.messages.4070001": "確認トークンが無効、または既に使用されています。フローを再試行してください。",
   "identities.messages.4070002": "要求はすでに成功して完了しており、再試行はできません。",
   "identities.messages.4070003": "確認フローが失敗状態に達しました。再試行が必要です。",
@@ -144,8 +144,8 @@
   "logout.reject-button": "いいえ",
   "logout.title": "ログアウトしますか？",
   "recovery.login-button": "ログイン",
-  "recovery.login-label": "資格情報を覚えていますか？",
-  "recovery.title": "パスワードを再発行",
+  "recovery.login-label": "ログイン情報を覚えていますか？",
+  "recovery.title": "パスワードをリセット",
   "registration.login-button": "ログイン",
   "registration.login-label": "すでにアカウントをお持ちですか？",
   "registration.subtitle-oauth2": "{clientName}の認証用",
