WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -15,7 +15,7 @@
   "error.title-not-found": "404 - ページが見つかりません",
   "identities.messages.1010001": "ログイン",
   "identities.messages.1010002": "{provider}でログイン",
-  "identities.messages.1010003": "あなたであることを確認するために、このアクションを確認してください。",
+  "identities.messages.1010003": "すでにログイン中ですが、あらためて認証情報を入力してください。",
   "identities.messages.1010004": "第二の認証チャレンジを完了してください。",
   "identities.messages.1010005": "確認",
   "identities.messages.1010006": "認証コード",
@@ -136,7 +136,7 @@
   "login.logout-label": "何か問題がありますか？",
   "login.registration-button": "新規登録",
   "login.registration-label": "アカウントをお持ちでないですか？",
-  "login.subtitle-oauth2": "{clientName}の認証用",
+  "login.subtitle-oauth2": "{clientName}からの認証リクエスト",
   "login.title": "ログイン",
   "login.title-aal2": "二要素認証",
   "login.title-refresh": "本人確認を行ってください",
@@ -148,7 +148,7 @@
   "recovery.title": "パスワードをリセット",
   "registration.login-button": "ログイン",
   "registration.login-label": "すでにアカウントをお持ちですか？",
-  "registration.subtitle-oauth2": "{clientName}の認証用",
+  "registration.subtitle-oauth2": "{clientName}からのリクエスト",
   "registration.title": "アカウントを新規登録",
   "settings.navigation-backup-codes": "2FAバックアップコード",
   "settings.navigation-logout": "ログアウト",
