Update registration title in ja.json

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -149,7 +149,7 @@
   "registration.login-button": "ログイン",
   "registration.login-label": "すでにアカウントをお持ちですか？",
   "registration.subtitle-oauth2": "{clientName}からのリクエスト",
-  "registration.title": "アカウントを新規登録",
+  "registration.title": "新規登録",
   "settings.navigation-backup-codes": "2FAバックアップコード",
   "settings.navigation-logout": "ログアウト",
   "settings.navigation-oidc": "ソーシャルログイン",
@@ -157,13 +157,13 @@
   "settings.navigation-profile": "プロファイル",
   "settings.navigation-totp": "認証アプリ",
   "settings.navigation-webauthn": "ハードウェアトークン",
-  "settings.subtitle-instructions": "ここでアカウントに関連する設定を管理できます。特定のアクションには再認証が必要であることに注意してください。",
+  "settings.subtitle-instructions": "",
   "settings.title": "アカウント設定",
   "settings.title-lookup-secret": "2FAバックアップ復旧コードを管理",
   "settings.title-navigation": "アカウント設定",
   "settings.title-oidc": "ソーシャルログイン",
   "settings.title-password": "パスワードを変更",
-  "settings.title-profile": "プロファイル設定",
+  "settings.title-profile": "ID設定",
   "settings.title-totp": "2FA TOTP認証アプリを管理",
   "settings.title-webauthn": "ハードウェアトークンを管理",
   "verification.registration-button": "新規登録",
