WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -80,7 +80,7 @@
   "identities.messages.4000007": "同じ識別子（メール、電話、ユーザー名...）を持つアカウントが既に存在します。",
   "identities.messages.4000008": "提供された認証コードは無効です。もう一度お試しください。",
   "identities.messages.4000009": "ログイン識別子を見つけることができませんでした。設定を忘れたのでしょうか？これはサーバーの設定ミスによるものかもしれません。",
-  "identities.messages.4000010": "アカウントはまだアクティブではありません。メールアドレスの確認を忘れたのではありませんか？",
+  "identities.messages.4000010": "アカウントはまだアクティブではありません。メールアドレスの確認を忘れていませんか？",
   "identities.messages.4000011": "TOTPデバイスの設定がありません。",
   "identities.messages.4000012": "このバックアップ復旧コードは既に使用されています。",
   "identities.messages.4000013": "WebAuthnデバイスの設定がありません。",
