WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -26,13 +26,13 @@
   "identities.messages.1010011": "セキュリティキーで続行",
   "identities.messages.1010012": "WebAuthnデバイス（例：セキュリティキー、生体認証スキャナーなど）を準備し、「続行」を押してください。",
   "identities.messages.1010013": "続行",
-  "identities.messages.1010014": "コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、ログインを再試行してください。",
+  "identities.messages.1010014": "コードが記載されたメールを、入力されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、ログインを再試行してください。",
   "identities.messages.1010015": "コードでログイン",
   "identities.messages.1040001": "新規登録",
   "identities.messages.1040002": "{provider}で新規登録",
   "identities.messages.1040003": "続行",
   "identities.messages.1040004": "セキュリティキーで新規登録",
-  "identities.messages.1040005": "コードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録を再試行してください。",
+  "identities.messages.1040005": "コードが記載されたメールを、入力されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録を再試行してください。",
   "identities.messages.1040006": "コードで新規登録",
   "identities.messages.1050001": "変更が保存されました！",
   "identities.messages.1050002": "{provider}をリンク",
@@ -53,8 +53,8 @@
   "identities.messages.1050017": "これはあなたの認証アプリの秘密です。QRコードをスキャンできない場合に使用してください。",
   "identities.messages.1050018": "セキュリティキー「{display_name}」を削除",
   "identities.messages.1060001": "アカウントのログインに成功しました。次の{privileged_session_expires_at_unix_until_minutes}分以内にパスワードを変更するか、代替のログイン方法（例：ソーシャルログイン）を設定してください。",
-  "identities.messages.1060002": "パスワードリセットリンクが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
-  "identities.messages.1060003": "パスワードリセットコードが記載されたメールを、提供されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060002": "パスワードリセットリンクが記載されたメールを、入力されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
+  "identities.messages.1060003": "パスワードリセットコードが記載されたメールを、入力されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1070001": "パスワード",
   "identities.messages.1070002": "{title}",
   "identities.messages.1070003": "保存",
@@ -76,9 +76,9 @@
   "identities.messages.4000003": "長さは {min_length} 以上である必要がありますが、実際の長さは {actual_length} です。",
   "identities.messages.4000004": "パターン \"{pattern}\" と一致しません",
   "identities.messages.4000005": "こちらのパスワードは使えません。8文字以上で推測されにくいパスワードを設定してください。",
-  "identities.messages.4000006": "提供されたログイン情報は無効です。パスワードやユーザー名、メールアドレス、電話番号のスペルミスを確認してください。",
+  "identities.messages.4000006": "ログインできませんでした。スペルミスをしていないか確認してください。",
   "identities.messages.4000007": "同じ識別子（メール、電話、ユーザー名...）を持つアカウントが既に存在します。",
-  "identities.messages.4000008": "提供された認証コードは無効です。もう一度お試しください。",
+  "identities.messages.4000008": "入力された認証コードは無効です。もう一度お試しください。",
   "identities.messages.4000009": "ログイン識別子を見つけることができませんでした。設定を忘れたのでしょうか？これはサーバーの設定ミスによるものかもしれません。",
   "identities.messages.4000010": "アカウントはまだアクティブではありません。メールアドレスの確認を忘れていませんか？",
   "identities.messages.4000011": "TOTPデバイスの設定がありません。",
