WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -57,7 +57,7 @@
   "identities.messages.1060003": "パスワードリセットコードが記載されたメールを、入力されたメールアドレス宛に送信しました。メールが届かない場合は、アドレスの綴りを確認し、登録時に使用したアドレスを使用していることを確認してください。",
   "identities.messages.1070001": "パスワード",
   "identities.messages.1070002": "{title}",
-  "identities.messages.1070003": "保存",
+  "identities.messages.1070003": "再ログインして保存する",
   "identities.messages.1070004": "ID",
   "identities.messages.1070005": "送信",
   "identities.messages.1070006": "コードを確認",
@@ -163,7 +163,7 @@
   "settings.title-navigation": "アカウント設定",
   "settings.title-oidc": "ソーシャルログイン",
   "settings.title-password": "パスワードを変更",
-  "settings.title-profile": "ID設定",
+  "settings.title-profile": "メールアドレスを変更",
   "settings.title-totp": "2FA TOTP認証アプリを管理",
   "settings.title-webauthn": "ハードウェアトークンを管理",
   "verification.registration-button": "新規登録",
