--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -61,7 +61,7 @@
   "identities.messages.1070004": "ID",
   "identities.messages.1070005": "送信",
   "identities.messages.1070006": "コードを確認",
-  "identities.messages.1070007": "メール",
+  "identities.messages.1070007": "メールアドレス",
   "identities.messages.1070008": "コードを再送",
   "identities.messages.1070009": "続行",
   "identities.messages.1070010": "パスワードリセットコード",
