WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -158,9 +158,9 @@
   "settings.navigation-totp": "認証アプリ",
   "settings.navigation-webauthn": "ハードウェアトークン",
   "settings.subtitle-instructions": "　",
-  "settings.title": "アカウント設定",
+  "settings.title": "アカウント情報編集",
   "settings.title-lookup-secret": "2FAバックアップ復旧コードを管理",
-  "settings.title-navigation": "アカウント設定",
+  "settings.title-navigation": "アカウント情報編集",
   "settings.title-oidc": "ソーシャルログイン",
   "settings.title-password": "パスワードを変更",
   "settings.title-profile": "メールアドレスを変更",
