WIP Japanese translation.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -102,8 +102,8 @@
   "identities.messages.4000029": "定数 {expected} と等しくなければなりません。",
   "identities.messages.4000030": "定数の一致に失敗しました。",
   "identities.messages.4000031": "IDに似すぎているため、パスワードは使用できません。",
-  "identities.messages.4000032": "パスワードは少なくとも {min_length} 文字である必要がありますが、実際は {actual_length} 文字です。",
-  "identities.messages.4000033": "パスワードは最大 {max_length} 文字である必要がありますが、実際は {actual_length} 文字です。",
+  "identities.messages.4000032": "パスワードは少なくとも {min_length} 文字である必要があります。入力されたパスワードは {actual_length} 文字でした。",
+  "identities.messages.4000033": "パスワードは最大 {max_length} 文字である必要があります。入力されたパスワードは {actual_length} 文字でした。",
   "identities.messages.4000034": "パスワードはデータ侵害で発見されたため、これ以上使用することはできません。",
   "identities.messages.4000035": "このアカウントは存在しないか、コードによるログインが設定されていません。",
   "identities.messages.4000036": "提供された特性は、このフローに以前関連付けられた特性と一致しません。",
